<resources>
    <string name="app_name">Mobile project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="search">search</string>
    <string name="cart">cart</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="none">none</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="no_account_note">"don't have an account ? "</string>
    <string name="sign_up">signUp</string>
    <string name="remember_me">remember me</string>
    <string name="username">username</string>
    <string name="logout">logout</string>
    <string name="shop_image">shop image</string>
    <string name="holder_1">i don\'t know yet</string>
    <string name="categories">Categories</string>
</resources>