<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <!-- App Logo -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="12dp"
        android:inputType="textEmailAddress" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginTop="12dp" />

    <CheckBox
        android:id="@+id/remember_me_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        android:checked="true"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:onClick="login"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="12dp">
        <!-- Register Navigation -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_note"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/brand_color"
            android:onClick="go_to_signUp_activity" />

    </TableRow>
</TableLayout>
