<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <!-- App Logo -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/username_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="12dp"
        android:inputType="textEmailAddress" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="12dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginTop="12dp" />

    <CheckBox
        android:id="@+id/remember_me_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        android:checked="true"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:onClick="signUp"/>

</LinearLayout>
