<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobileproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_ProductsFragment"
            app:destination="@id/navigation_products" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.mobileproject.ShopProductsFragment"
        android:label="Products"
        tools:layout="@layout/fragment_shop_products"/>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.mobileproject.ui.cart.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.mobileproject.ui.search.SearchFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_SearchFragment_to_CategoryFragment"
            app:destination="@id/navigation_category" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mobileproject.ui.Profile.Profile"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.mobileproject.CategoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_category" />
</navigation>